# LatticeKotlin

./: .gitignore  .gitmodules  ANDROID_ARCHITECTURE.md  CHANGELOG.md  README.md  build.gradle.kts  build.py  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
example/: build.gradle.kts
example/src/macosArm64Main/kotlin/com/example/: Main.kt  Models.kt
examples/notes-android/: build.gradle.kts  settings.gradle.kts
examples/notes-android/app/: build.gradle.kts
examples/notes-android/app/src/main/: AndroidManifest.xml
lattice-compiler-plugin/: build.gradle.kts
lattice-gradle-plugin/: build.gradle.kts
lattice-runtime/: build.gradle.kts
lattice-runtime/src/androidMain/jni/: CMakeLists.txt  lattice_jni.c
lattice-runtime/src/androidMain/kotlin/com/lattice/: CompanionInit.kt  HttpClientFactory.kt  NativeBridgeImpl.kt  NetworkBridge.kt  NetworkInit.kt  ObserverRegistryImpl.kt  SchedulerImpl.kt
lattice-runtime/src/commonMain/kotlin/com/lattice/: Annotations.kt  CoroutineSafeReference.kt  EmbeddedSupport.kt  GeoBounds.kt  IpcConfig.kt  Lattice.kt  LatticeList.kt  LatticeNative.kt  LatticeObject.kt  Migration.kt  NativeBridge.kt  NetworkInit.kt  Observation.kt  Query.kt  Results.kt  Scheduler.kt  Sync.kt  TextQuery.kt  Vector.kt  VectorSearch.kt  VirtualModel.kt  WebSocket.kt
lattice-runtime/src/nativeInterop/cinterop/: lattice.def
lattice-runtime/src/nativeMain/kotlin/com/lattice/: CompanionInit.kt  HttpClientFactory.kt  NativeBridgeImpl.kt  NetworkInit.kt  SchedulerImpl.kt  (+2 more)
lattice-runtime/src/nativeTest/resources/: sync_relay_server.py
(+39 files in other folders)
